# tinci-mcp

./: .gitignore  README.md  pyproject.toml
src/canmcp/: __init__.py  server.py  tone_mapper.py
src/tinci_mcp/: __init__.py  rhyme_lookup.py  server.py
src/tinci_mcp/data/: rhymes.json
src/tinci_mcp/utils/: scrape_rhymes.py
