[project]
name = "canmcp"
version = "0.1.0"
description = "MCP server for Cantonese pronunciation and tonal pattern analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "ToJyutping>=3.2.0",
]

[project.scripts]
canmcp = "canmcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canmcp"]

