[project]
name = "tinci-mcp"
version = "0.1.0"
description = "MCP server for Cantonese lyric writing (粵語填詞) with tonal pattern analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "ToJyutping>=3.2.0",
]

[project.scripts]
tinci-mcp = "tinci_mcp.server:main"

[project.optional-dependencies]
dev = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinci_mcp"]
